--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ theme:
   custom_dir: custom_theme/
   palette:
     primary: red
-    accent: maroon
+    accent: deep purple
   font:
     text: Roboto
   logo: static/logo304.svg
